svg animation working on scroll, no longer needing pixel measurements due to inviewport plugin. organize file system for better readability

--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ margin-top:-52px;
   background-color:#CCCF20;
   padding:1px 0 1px 26px;
   margin-bottom:10px;
-  background: url(background-wis.svg) no-repeat center center fixed;
+  background: url(images/background-wis.svg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
